# air

./: .gitignore  Cargo.toml
src/: core.rs  logger.rs  main.rs
src/model/: backend.rs  data_model.rs  data_repository.rs  evolution.rs  mod.rs  models.rs  repository.rs  repository_message.rs
src/model/definitions/: character_model.rs  model.rs
src/model/models/: event_model.rs  mod.rs
src/utilities/: input_piper.rs  mod.rs
src/view/: helper.rs  mod.rs  styles.rs  types.rs  view.rs  view_model.rs  wrapper.rs
src/view/component/: character_detail_component.rs  dep.rs  edge_component.rs  list_component.rs  message_component.rs  mod.rs  tab_component.rs  view_model.rs
src/view/composite/: character_page.rs  dep.rs  error_page.rs  event_page.rs  mod.rs  quest_page.rs  system_page.rs  view_model.rs
src/view/interfaces/: data_processor.rs  evolute.rs  mod.rs  page.rs
src/view/interfaces/event_handler/: key_event_handler.rs  mod.rs
