[package]
name = "air"
version = "0.1.0"
authors = ["Knair <knairwang@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0"
async-trait = "0.1.42"
chrono = "0.4"
tokio = { version = "0.3", features = ['full'] }

crossterm = "0.18"
tui = { version = "0.13", default-features = false, features = ['crossterm'] }

flexi_logger = "0.16"
log = "0.4"
